syntax = "proto3";
package user;
option go_package = ".;user";

message UserRequest {
  string name = 1;
}

message UserResponse {
  string reply = 1;
}

service UserService {
  rpc SayHello(UserRequest) returns (UserResponse){}
}